# qt-test

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: windows-build.yml
